# simple_location_app

./: login_anomaly_detection.db  mind_map.md  pyproject.toml  requirements.txt
src/: bokeh_viss.py  config.py  file_.py  geoloc.py  loader.py  main.py  new_vis.py  plotly_vis.py  t  test.py  visTest.py  visualize.py
src/db/: __init__.py  base.py  models.py  repositories.py
src/services/: __init__.py  geo_utils.py  processor.py
src/utils/: __init__.py  helpers.py  validators.py
tests/: sample_data.json
